<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotationX="0">

        <TextView
            android:id="@+id/tvAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/tvGryo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            app:layout_constraintEnd_toStartOf="@+id/az"
            app:layout_constraintStart_toEndOf="@+id/tvAcc"
            app:layout_constraintTop_toTopOf="@+id/tvAcc" />

        <TextView
            android:id="@+id/ay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/az"
            app:layout_constraintTop_toTopOf="@+id/tvAcc" />

        <TextView
            android:id="@+id/az"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAcc"
            app:layout_constraintTop_toTopOf="@+id/tvAcc" />


        <TextView
            android:id="@+id/tvGryo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope"
            app:layout_constraintBottom_toTopOf="@+id/tvHeart"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAcc" />

        <TextView
            android:id="@+id/gx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            app:layout_constraintBottom_toTopOf="@+id/hr"
            app:layout_constraintEnd_toEndOf="@+id/ax"
            app:layout_constraintStart_toStartOf="@+id/ax"
            app:layout_constraintTop_toBottomOf="@+id/ax" />

        <TextView
            android:id="@+id/gy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            app:layout_constraintBottom_toTopOf="@+id/hr"
            app:layout_constraintEnd_toEndOf="@+id/az"
            app:layout_constraintStart_toStartOf="@+id/az"
            app:layout_constraintTop_toBottomOf="@+id/az" />

        <TextView
            android:id="@+id/gz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            app:layout_constraintBottom_toTopOf="@+id/hr"
            app:layout_constraintEnd_toEndOf="@+id/ay"
            app:layout_constraintStart_toStartOf="@+id/ay"
            app:layout_constraintTop_toBottomOf="@+id/ay" />


        <TextView
            android:id="@+id/tvHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvGryo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpm"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeart"
            app:layout_constraintStart_toStartOf="@+id/gx"
            app:layout_constraintTop_toTopOf="@+id/tvHeart" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHeart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>